2006-12-09  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Adding tons of new paperdoll graphics for BG by Crysta. Also removed
	  unneeded file.
	* Improved UCXT data files and intrinsic table.
	* Improved WUD/WUC opcode table and fixed a few errors.

2006-12-08  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixing a few stack corruption bugs in UCC.
	* Changing wud/wuc name of opcode 0x5C.

2006-12-07  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Changing the way Exult handles the game clock. Now, the game clock 'ticks'
	  25 times per game minute, regardless of FPS, which seems to be the way it
	  worked in the original.
	* Sime improvements to the 'pace' schedule.
	* NPC schedules now update every hour, and look back until it finds a
	  schedule for the NPC.
	* Added a 'continue' statement in UCC for 'while' and 'for' statements.
	* Fixed a few bugs and updated a few things in the Keyring mod. Added new
	  Mariah gump by Crysta.

2006-12-06  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* actors.*, intrinsics.cc, ucsched.cc, ucparse.yy, exult_intrinsics.txt:
	  Implemented damage type parameter of 'apply_damage' and 'reduce_health'
	  intrinsics and of the 'hit' script opcode. Also implemented the red flash
	  for lighting damage for even a single hit, as it happened in the original,
	  as well as flashign red for high amounts of damage.
	  Also implemented 'repeat2' support in UCC.
	* everything else: Fixing bugs in the mods and updating them to use the
	  changes above.

2006-12-05  Marzo Sette Torres Junior <marzojr@yahoo.com>
	Adding new 'is_dest_reachable' intrinsic and documentation for it.

2006-12-04  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Updating documentation of [get|set|clear]_item_flag intrinsics.
	* Fixed bug #1608149.

2006-12-02  Marzo Sette Torres Junior <marzojr@yahoo.com>
	Fixing Keyring bugs in forging code/Menion's training.

2006-11-30  Marzo Sette Torres Junior <marzojr@yahoo.com>